# advent-of-code

./: .pre-commit-config.yaml  pyproject.toml
aoc_2024/: utils.py
aoc_2024/days/: day01.py  day02.py  day03.py  day03_part1.py  day03_part2.py  day04_part1.py  day04_part2.py  day05.py  day06_part1.py  day06_part2.py  day07.py  day08.py
aoc_2024/tests/: test_day01.py  test_day02.py  test_day03_part1.py  test_day03_part2.py  test_day04.py  test_day05.py  test_sample.py
